update no index

--- a/exercicios/modulo-01/ex001/index.html
+++ b/exercicios/modulo-01/ex001/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Esse é o meu primeiro documento HTML! Estou muito feliz!</p>
     <p>Este é um momento único! Estou criando um site!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, debitis est ut porro quos iste nam, ea, dolorem amet natus enim. Cum voluptate ratione harum eligendi veritatis nam fugiat perferendis.</p>
 </body>
 </html>
